[gd_scene load_steps=17 format=3 uid="uid://up44ll3gqwj4"]

[ext_resource type="Script" uid="uid://uaclmgtjlu5q" path="res://GameScene.gd" id="1_onqr8"]
[ext_resource type="Texture2D" uid="uid://dgvip4tpx7qfv" path="res://assets/background.jpg" id="2_ycayy"]
[ext_resource type="Shader" uid="uid://co7wwhfmus7ib" path="res://resources/TextureOverlay.gdshader" id="3_bw6k5"]
[ext_resource type="Script" uid="uid://bc3ocaqavytqr" path="res://scripts/ui/floating_particles.gd" id="4_y3j0m"]
[ext_resource type="Script" uid="uid://pw6qc3aixc5r" path="res://scripts/ui/corner_decorations.gd" id="5_y3j0m"]
[ext_resource type="Script" uid="uid://bl8814rtr81eg" path="res://scripts/ui/styled_panel.gd" id="6_kk2rg"]
[ext_resource type="Texture2D" uid="uid://b6g0b14bxh5he" path="res://icon.svg" id="7_b5spy"]
[ext_resource type="Script" uid="uid://cj610n0q5ptju" path="res://scripts/ui/fancy_stat_box.gd" id="8_b5spy"]
[ext_resource type="Script" uid="uid://b35uputnrh5hn" path="res://scripts/ui/grid_manager_enhanced.gd" id="8_tcjrq"]
[ext_resource type="Script" uid="uid://cx1qju5yeh7nt" path="res://scripts/ui/enchanced_button.gd" id="9_mw25s"]
[ext_resource type="Script" uid="uid://cjvq6qndjjwge" path="res://scripts/ui/bench_manager.gd" id="9_rvs2r"]
[ext_resource type="Script" uid="uid://cr4x1847ogvfw" path="res://scripts/ui/current_display.gd" id="9_utbpp"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_rurhu"]
shader = ExtResource("3_bw6k5")
shader_parameter/opacity = 0.3
shader_parameter/scale = 2.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_b5spy"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_utbpp"]
content_margin_left = 20.0
content_margin_top = 12.0
content_margin_right = 20.0
content_margin_bottom = 12.0
bg_color = Color(0.1254902, 0.17254902, 0.23137255, 0.9019608)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.36078432, 0.69803923, 0.90588236, 0.9098039)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_color = Color(0.28235295, 0.4862745, 0.8352941, 0.39215687)
shadow_size = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kk2rg"]
content_margin_left = 20.0
content_margin_top = 12.0
content_margin_right = 20.0
content_margin_bottom = 12.0
bg_color = Color(0.14509805, 0.2, 0.26666668, 0.8901961)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.34901962, 0.62352943, 0.8627451, 0.8117647)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="GameScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_onqr8")

[node name="DarkBase" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.050980393, 0.050980393, 0.08235294, 1)

[node name="BackGround" type="TextureRect" parent="."]
modulate = Color(0.050980393, 0.050980393, 0.078431375, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_ycayy")

[node name="TextureOverlay" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_rurhu")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Vignette" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.003921569, 0.003921569, 0.003921569, 0.015686275)

[node name="FloatingParticles" type="Node2D" parent="."]
script = ExtResource("4_y3j0m")

[node name="CornerDecorations" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("5_y3j0m")

[node name="MainLayout" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="MainMargin" type="MarginContainer" parent="MainLayout"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="LeftPanel" type="VBoxContainer" parent="MainLayout"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2

[node name="ArtifactsBox" type="PanelContainer" parent="MainLayout/LeftPanel"]
layout_mode = 2
script = ExtResource("6_kk2rg")

[node name="ArtifactsContent" type="VBoxContainer" parent="MainLayout/LeftPanel/ArtifactsBox"]
layout_mode = 2

[node name="ArtifactsHeader" type="Label" parent="MainLayout/LeftPanel/ArtifactsBox/ArtifactsContent"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7490196, 0.61960787, 0.5019608, 1)
theme_override_constants/line_spacing = 3
theme_override_font_sizes/font_size = 14
text = "ARTIFACTS"

[node name="GridContainer" type="GridContainer" parent="MainLayout/LeftPanel/ArtifactsBox/ArtifactsContent"]
layout_mode = 2
columns = 2

[node name="Spacer" type="Control" parent="MainLayout/LeftPanel"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2

[node name="BossContainer" type="VBoxContainer" parent="MainLayout/LeftPanel"]
layout_mode = 2

[node name="BossPanel" type="PanelContainer" parent="MainLayout/LeftPanel/BossContainer"]
layout_mode = 2
script = ExtResource("6_kk2rg")
panel_style = 1

[node name="Portrait" type="TextureRect" parent="MainLayout/LeftPanel/BossContainer/BossPanel"]
layout_mode = 2
texture = ExtResource("7_b5spy")

[node name="Speech" type="Label" parent="MainLayout/LeftPanel/BossContainer/BossPanel"]
layout_mode = 2
text = "I await your move...."

[node name="CenterPanel" type="VBoxContainer" parent="MainLayout"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 3

[node name="LimboHeaders" type="HBoxContainer" parent="MainLayout/CenterPanel"]
layout_mode = 2
theme_override_constants/separation = 8
alignment = 1

[node name="Label" type="Label" parent="MainLayout/CenterPanel/LimboHeaders"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6723437, 0, 0.23866248, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.79607844)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_font_sizes/font_size = 48
text = "L"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="MainLayout/CenterPanel/LimboHeaders"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6061149, 0.34655234, 0.093806885, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.79607844)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_font_sizes/font_size = 48
text = "I"
horizontal_alignment = 1

[node name="Label3" type="Label" parent="MainLayout/CenterPanel/LimboHeaders"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0.02745098, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.79607844)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_font_sizes/font_size = 48
text = "M"
horizontal_alignment = 1

[node name="Label4" type="Label" parent="MainLayout/CenterPanel/LimboHeaders"]
layout_mode = 2
theme_override_colors/font_color = Color(0.2, 1, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.79607844)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_font_sizes/font_size = 48
text = "B"
horizontal_alignment = 1

[node name="Label5" type="Label" parent="MainLayout/CenterPanel/LimboHeaders"]
layout_mode = 2
theme_override_colors/font_color = Color(0.64126736, 0.0012683416, 0.78117305, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.79607844)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_font_sizes/font_size = 48
text = "O"
horizontal_alignment = 1

[node name="GridFrame" type="PanelContainer" parent="MainLayout/CenterPanel"]
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("6_kk2rg")
border_color = Color(0.39215687, 0.45490196, 0.62352943, 0.59607846)

[node name="GridBoard" type="GridContainer" parent="MainLayout/CenterPanel/GridFrame"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
columns = 5
script = ExtResource("8_tcjrq")

[node name="BenchArea" type="Control" parent="MainLayout/CenterPanel"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
script = ExtResource("9_rvs2r")

[node name="BenchLabel" type="Label" parent="MainLayout/CenterPanel/BenchArea"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 10.0
offset_bottom = 30.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.7254902, 0.6039216, 0.49803922, 1)
theme_override_font_sizes/font_size = 14
text = "BENCH"
horizontal_alignment = 1

[node name="RightPanel" type="VBoxContainer" parent="MainLayout"]
custom_minimum_size = Vector2(340, 0)
layout_mode = 2

[node name="StatsBox" type="VBoxContainer" parent="MainLayout/RightPanel"]
layout_mode = 2

[node name="StatsPanel" type="PanelContainer" parent="MainLayout/RightPanel/StatsBox"]
layout_mode = 2
script = ExtResource("6_kk2rg")

[node name="StatsContent" type="VBoxContainer" parent="MainLayout/RightPanel/StatsBox/StatsPanel"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="ScoreStat" type="PanelContainer" parent="MainLayout/RightPanel/StatsBox/StatsPanel/StatsContent"]
layout_mode = 2
script = ExtResource("8_b5spy")
stat_label = "SCORE"
stat_value = "14500"
icon_text = "ðŸ‘‘"
is_primary = true

[node name="TargetStat" type="PanelContainer" parent="MainLayout/RightPanel/StatsBox/StatsPanel/StatsContent"]
layout_mode = 2
script = ExtResource("8_b5spy")
stat_label = "TARGET"
stat_value = "20000"

[node name="SmallStatsRow" type="HBoxContainer" parent="MainLayout/RightPanel/StatsBox/StatsPanel/StatsContent"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="RoundStat" type="PanelContainer" parent="MainLayout/RightPanel/StatsBox/StatsPanel/StatsContent/SmallStatsRow"]
layout_mode = 2
script = ExtResource("8_b5spy")
stat_label = "ROUND"
stat_value = "3"

[node name="EncounterStat" type="PanelContainer" parent="MainLayout/RightPanel/StatsBox/StatsPanel/StatsContent/SmallStatsRow"]
layout_mode = 2
script = ExtResource("8_b5spy")
stat_label = "ENCOUNTER"
stat_value = "2/5"

[node name="DrawsStat" type="PanelContainer" parent="MainLayout/RightPanel/StatsBox/StatsPanel/StatsContent"]
layout_mode = 2
script = ExtResource("8_b5spy")
stat_label = "DRAWS LEFT"
stat_value = "7"
icon_text = "âš¡"
glow_color = Color(0.78431374, 0.50980395, 1, 0.3019608)

[node name="Spacer" type="Control" parent="MainLayout/RightPanel"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="ActionsBox" type="VBoxContainer" parent="MainLayout/RightPanel"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="DRAW" type="Button" parent="MainLayout/RightPanel/ActionsBox"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_styles/pressed = SubResource("StyleBoxFlat_b5spy")
theme_override_styles/hover_mirrored = SubResource("StyleBoxFlat_utbpp")
text = "DRAW"
script = ExtResource("9_mw25s")
is_primary = true

[node name="BENCH" type="Button" parent="MainLayout/RightPanel/ActionsBox"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_styles/pressed = SubResource("StyleBoxFlat_b5spy")
theme_override_styles/hover_mirrored = SubResource("StyleBoxFlat_utbpp")
text = "BENCH"
script = ExtResource("9_mw25s")

[node name="SCORE" type="Button" parent="MainLayout/RightPanel/ActionsBox"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_kk2rg")
theme_override_styles/pressed = SubResource("StyleBoxFlat_b5spy")
theme_override_styles/hover_mirrored = SubResource("StyleBoxFlat_utbpp")
text = "SCORE"
script = ExtResource("9_mw25s")

[node name="ActiveSlabSlot" type="PanelContainer" parent="MainLayout/RightPanel"]
custom_minimum_size = Vector2(120, 150)
layout_mode = 2

[node name="CurrencyContainer" type="HBoxContainer" parent="MainLayout/RightPanel"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="ObolsDisplay" type="PanelContainer" parent="MainLayout/RightPanel/CurrencyContainer"]
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("9_utbpp")
currency_value = 156

[node name="EssenceDisplay" type="PanelContainer" parent="MainLayout/RightPanel/CurrencyContainer"]
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("9_utbpp")
currency_name = "ESSENCE"
currency_value = 42
icon_text = "âœ¦"
border_color = Color(0.5019608, 0.78431374, 1, 0.6)
icon_color = Color(0.4862745, 0.9019608, 1, 1)
